# Federated_Learning

./: README.md
fd-learning/: .gitignore  README.md  pyproject.toml  requirement.txt
fd-learning/fd_learning/: __init__.py  client_app.py  server_app.py  task.py
fd-learning/test/: local_testing.py
